--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-imask": "^7.0.1-alpha.0",
     "react-router-dom": "^6.12.0",
     "react-scroll": "^1.8.9"
   },
