--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^6.1.0",
     "react-imask": "^7.0.1-alpha.0",
     "react-router-dom": "^6.12.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "typed.js": "^2.0.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
