--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bowser": "^2.11.0",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-imask": "^7.0.1-alpha.0",
     "react-router-dom": "^6.12.0",
     "react-scroll": "^1.8.9",
-    "typed.js": "^2.0.16"
+    "typed.js": "^2.0.16",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
